--- a/common/spring-security/src/main/resources/application-redis.yml
+++ b/common/spring-security/src/main/resources/application-redis.yml
@@ -1,13 +1,13 @@
 spring:
   redis:
-    host: 192.168.100.101
+    host: 192.168.190.100
     port: 6379
     database: 0
     timeout: 1800000
     password: 123456
     jedis:
       pool:
-        max-active: 20 #最大连接数
-        max-wait: -1    #最大阻塞等待时间(负数表示没限制)
-        max-idle: 5    #最大空闲
-        min-idle: 0     #最小空闲
+        max-active: 20
+        max-wait: -1
+        max-idle: 5
+        min-idle: 0
