--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <version>2.3.6.RELEASE</version>
     </parent>
     <groupId>com.atguigu</groupId>
-    <artifactId>guigu-syt-parent</artifactId>
+    <artifactId>ShangYiTong-background-system</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
     <name>guigu-syt-parent</name>
