--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -50,5 +50,22 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!--MP代码生成器-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+        </dependency>
+        <!--代码生成器模板-->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+        </dependency>
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
