--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-system</module>
+        <module>service-hosp</module>
     </modules>
 
     <properties>
