--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+<!--            <version>1.2.11</version>-->
+        </dependency>
     </dependencies>
 </project>
