--- a/service/service-hosp/src/main/resources/application-dev.yml
+++ b/service/service-hosp/src/main/resources/application-dev.yml
@@ -2,8 +2,8 @@ server:
   port: 8201
 
 mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:com/atguigu/syt/hosp/mapper/xml/*.xml
 spring:
   datasource:
@@ -14,3 +14,6 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+logging:
+  level:
+    root: info
