--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>service-system</module>
         <module>service-hosp</module>
+        <module>service-cmn</module>
     </modules>
 
     <properties>
