--- a/service/service-hosp/pom.xml
+++ b/service/service-hosp/pom.xml
@@ -17,6 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <!--mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
         <!--实体-->
         <dependency>
             <groupId>com.atguigu</groupId>
