--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -71,5 +71,10 @@
             <artifactId>logback-classic</artifactId>
 <!--            <version>1.2.11</version>-->
         </dependency>
+<!--     fastjson   -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 </project>
