获取医院列表字典映射,远程调用字典,调用降级熔断测试,修改医院状态,医院详情

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>common</module>
         <module>service</module>
         <module>server-gateway</module>
+        <module>feign-client</module>
+        <module>feign-client/feign-cmn-client</module>
     </modules>
 
     <properties>
