--- a/service/service-hosp/src/main/resources/application-dev.yml
+++ b/service/service-hosp/src/main/resources/application-dev.yml
@@ -22,6 +22,10 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   cloud:
+    sentinel:
+      transport:
+        port: 8720
+        dashboard: 127.0.0.1:8080
     nacos:
       discovery:
         server-addr: 192.168.190.101:8848
@@ -36,3 +40,11 @@ logging:
   file:
     path: hosp
 
+feign:
+  client:
+    config:
+      default:
+        connect-timeout: 2000 #连接建立的超时时长，单位是ms，默认1s
+        read-timeout: 2000 #处理请求的超时时间，单位是ms，默认为1s
+  sentinel:
+    enabled: true #开启Feign对Sentinel的支持
