--- a/service/service-hosp/pom.xml
+++ b/service/service-hosp/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>feign-cmn-client</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <!--时间日期工具-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
