对接微信登录

--- a/server-gateway/src/main/resources/application-dev.yml
+++ b/server-gateway/src/main/resources/application-dev.yml
@@ -16,6 +16,9 @@ spring:
         - id: service-cmn
           predicates: Path=/*/cmn/**
           uri: lb://service-cmn
+        - id: service-user
+          predicates: Path=/*/user/**
+          uri: lb://service-user
     nacos:
       discovery:
         server-addr: 192.168.190.101:8848
