--- a/service/service-yun/pom.xml
+++ b/service/service-yun/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>service-hosp</artifactId>
+    <artifactId>service-yun</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,11 +17,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
-        <!--mongodb-->
+        <!-- 阿里云oss依赖 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.15.1</version>
         </dependency>
+
         <!--实体-->
         <dependency>
             <groupId>com.atguigu</groupId>
@@ -36,17 +38,17 @@
             <version>1.0</version>
         </dependency>
 
+        <!--时间日期工具-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+
         <!--自定义安全模块-->
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>spring-security</artifactId>
             <version>1.0</version>
-        </dependency>
-
-        <!--mysql驱动-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <!-- 单元测试 -->
@@ -57,12 +59,5 @@
         </dependency>
 
 
-
-        <!--时间日期工具-->
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-        </dependency>
     </dependencies>
-
 </project>
