补充日志，调用优化

--- a/service/service-hosp/src/main/resources/application-dev.yml
+++ b/service/service-hosp/src/main/resources/application-dev.yml
@@ -36,7 +36,7 @@ logging:
       mongodb:
         driver:
           protocol:
-            command: debug
+            command: info
   file:
     path: hosp
 
