就诊人增改查

--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!--自定义工具-->
         <dependency>
             <groupId>com.atguigu</groupId>
