--- a/service/service-yun/src/main/resources/application-dev.yml
+++ b/service/service-yun/src/main/resources/application-dev.yml
@@ -20,6 +20,6 @@ logging:
 aliyun:
   oss:
     endpoint: oss-cn-chengdu.aliyuncs.com
-    key-id: LTAI5tRV1RaGdU6RsEkX8AjV
-    key-secret: 6Qw1KvysQxyN9ZjRYCm9ttjIUZFrul
+    key-id: LTAI5tRV
+    key-secret: 6Qw1KvystjIUZFrul
     bucket-name: kutake-syt
