--- a/server-gateway/src/main/resources/application-dev.yml
+++ b/server-gateway/src/main/resources/application-dev.yml
@@ -22,6 +22,9 @@ spring:
         - id: service-yun
           predicates: Path=/*/yun/**
           uri: lb://service-yun
+        - id: service-order
+          predicates: Path=/*/order/**
+          uri: lb://service-order
     nacos:
       discovery:
         server-addr: 192.168.190.101:8848
