--- a/feign-client/pom.xml
+++ b/feign-client/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>feign-oss-client</module>
         <module>feign-cmn-client</module>
+        <module>feign-user-client</module>
+        <module>service-hosp-client</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,6 +26,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
