--- a/common/rabbit-utils/pom.xml
+++ b/common/rabbit-utils/pom.xml
@@ -5,24 +5,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.atguigu</groupId>
-        <artifactId>ShangYiTong-background-system</artifactId>
+        <artifactId>common</artifactId>
         <version>1.0</version>
     </parent>
 
-    <artifactId>common</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>model</module>
-        <module>common-util</module>
-        <module>service-util</module>
-        <module>spring-security</module>
-        <module>rabbit-utils</module>
-    </modules>
+    <artifactId>rabbit-utils</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <!--rabbitmq消息队列-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
