--- a/service/service-hosp/pom.xml
+++ b/service/service-hosp/pom.xml
@@ -17,6 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <!--MQ-->
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>rabbit-utils</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!--mongodb-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
