--- a/service/service-hosp/src/main/resources/application-dev.yml
+++ b/service/service-hosp/src/main/resources/application-dev.yml
@@ -6,6 +6,11 @@ mybatis-plus:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:com/atguigu/syt/hosp/mapper/xml/*.xml
 spring:
+  rabbitmq:
+    host: 192.168.190.101
+    port: 5672
+    username: guest
+    password: guest
   data:
     mongodb:
       database: syt
