--- a/service/service-order/src/main/resources/application-dev.yml
+++ b/service/service-order/src/main/resources/application-dev.yml
@@ -5,6 +5,11 @@ mybatis-plus:
 server:
   port: 8205
 spring:
+  rabbitmq:
+    host: 192.168.190.101
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     nacos:
       discovery:
