--- a/service/service-yun/pom.xml
+++ b/service/service-yun/pom.xml
@@ -17,6 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <!--MQ-->
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>rabbit-utils</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!-- 阿里云oss依赖 -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
