--- a/service/service-yun/src/main/resources/application-dev.yml
+++ b/service/service-yun/src/main/resources/application-dev.yml
@@ -1,6 +1,11 @@
 server:
   port: 8204
 spring:
+  rabbitmq:
+    host: 192.168.190.101
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     nacos:
       discovery:
@@ -20,6 +25,6 @@ logging:
 aliyun:
   oss:
     endpoint: oss-cn-chengdu.aliyuncs.com
-    key-id: LTAI5tRV
-    key-secret: 6Qw1KvystjIUZFrul
+    key-id: LTAI5tRV1RaGdU6RsEkX8AjV
+    key-secret: 6Qw1KvysQxyN9ZjRYCm9ttjIUZFrul
     bucket-name: kutake-syt
