--- a/service/service-order/pom.xml
+++ b/service/service-order/pom.xml
@@ -17,6 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <!--回调验签代码需要-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>rabbit-utils</artifactId>
