--- a/service/service-order/src/main/resources/wxpay.properties
+++ b/service/service-order/src/main/resources/wxpay.properties
@@ -11,4 +11,4 @@ wxpay.appid=wx74862e0dfcf69954
 # // 接收支付结果通知地址
 wxpay.notify-url=https://7d92-115-171-63-135.ngrok.io/api/order/wxpay/payment/notify
 # // 接收退款结果通知地址
-wxpay.notify-refund-url=http://agxnyzl04y90.ngrok.xiaomiqiu123.top/api/order/wxpay/refunds/notify
+wxpay.notify-refund-url=http://cl6i7fvqmd1e.hk1.xiaomiqiu123.top/api/order/wxpay/refunds/notify
