--- a/service/service-order/src/main/resources/application-dev.yml
+++ b/service/service-order/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:com/atguigu/syt/order/mapper/xml/*.xml
 server:
   port: 8205
