--- a/service/service-yun/pom.xml
+++ b/service/service-yun/pom.xml
@@ -17,6 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+
         <!--MQ-->
         <dependency>
             <groupId>com.atguigu</groupId>
